--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <meta-data
+    <!-- <meta-data
         android:name="io.flutter.embedding.android.EnableImpeller"
-        android:value="false" />
+        android:value="false" /> -->
     <application
         android:label="camera_tflit"
         android:name="${applicationName}"
